<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="action_settings">Settings</string>
    <string name="app_name">AdaptUI demonstrator</string>
    <string name="view_params">viewParams</string>
    <string name="activity_caller">caller</string>
    
    <!-- MainActivity -->
    <string name="loading_message_dialog">Loading. Please wait&#8230;</string>
    <string name="foaf_uri">http://xmlns.com/foaf/0.1/</string>
    <string name="cobra_device_uri">http://daml.umbc.edu/ontologies/cobra/0.4/device</string>
    <string name="user_model_ont_uri">http://u2m.org/2003/02/UserModelOntology.rdf</string>
    <string name="swrla_uri">http://swrl.stanford.edu/ontologies/3.3/swrla.owl</string>
    <string name="sqwrl_uri">http://sqwrl.stanford.edu/ontologies/built-ins/3.4/sqwrl.owl</string>
    
    <!-- AbstractActivity -->
    <string name="ontology_path">/sdcard/ontologies/</string>
    <string name="ontology_namespace">http://www.morelab.deusto.es/ontologies/adaptui#</string>
    <string name="ontology_filename">adaptui.owl</string>
    
    <!-- CapabilitiesActivity -->
    <string name="instructions_es">Configurador de AdaptUI</string>
    <string name="basic_input_message_en">If you prefer an audio based interaction, please say YES or
        hold your finger over the screen. Otherwise, please say NO or push the button.</string>
    <string name="basic_input_message_es">Para una interacción por voz diga "Sí" o mantenga pulsada la pantalla.
	</string>
    <string name="input_button_message_en">PUSH ME!</string>
    <string name="input_button_message_es">¡Púlseme!</string>
    <string name="start_es">Iniciar tutorial</string>
    <string name="start_en">Start tutorial</string>
    <string name="send_email_en">Avoid configuration</string>
 	<string name="send_email_es">Demo Email</string>
 	<string name="navigate_es">Demo AssistedCity</string>
 	<string name="message_visual_interaction_es">Seleccionada interacción visual</string>
 	<string name="si">Si</string>
 	<string name="no">No</string>
    
	<!-- ButtonConfigActivity -->
	<string name="button_info_message_en">Can you see and push the button? If you cannot, please hold your finger on the screen, your device will vibrate and the button will become bigger. Repeat the operation until you can see it and push it.</string>
	<string name="button_info_message_es">Configure los botones a su gusto en tamaño y color</string>
    <string name="button_resize_message_en">Push me!</string>
    <string name="button_resize_message_es">Modificar botón</string>
    <string name="next_message_en">Next</string>
    <string name="next_message_es">Siguiente</string>
    <string name="button_text_color_en">Button Text Color</string>
    <string name="button_text_color_es">Color del texto</string>
    <string name="button_color_en">Background Color</string>
    <string name="button_color_es">Color del botón</string>
    <string name="button_background_color_es">Color del fondo</string>
    
    <string name="volume_message">Configure the desired Volume</string>
    <string name="visual_impairment">Visual Impairment</string>
    <string name="hearing_impairment">Hearing Impairment</string>
    <string name="button_background_color">Button Back Color</string>
    <string name="edit_text_text_color">EditText Text Color</string>
    <string name="edit_text_background_color">EditText Back Color</string>
    <string name="edit_text_size">EditText Size</string> 
    <string name="recognizer_error">"Voice recognizer not present"</string>
    
 	<!-- Edit_Text_Config_Activity -->
    <string name="text_view_info_message_en">TEST</string>
    <string name="text_view_info_message_es">PRUEBA</string>
    <string name="edit_text_info_message_en">Can you read the message above? If you cannot, please hold your finger on the screen, your device will vibrate and the message will become bigger. Repeat the operation until you can read it.</string>
    <string name="edit_text_info_message_es">¿Puede leer el mensaje? Si no le es posible, pulse la pantalla hasta que consiga verlo.</string>
    
    <!-- Brightness_Config_Activity -->
	<string name="brightness_info_message_en">Tap the screen to configure the screen brightness</string>
	<string name="brightness_info_message_es">Pulse la pantalla para cambiar el brillo</string>
	<string name="brightness_message_en">Configure the desired Brightness</string>
	<string name="brightness_message_es">Configure el brillo deseado</string>
	<string name="edit_text_message_en">Read me!</string>
	<string name="edit_text_message_es">¡Léame!</string>
	<string name="button_sample_es">Botón de ejemplo</string>
	<string name="edit_text_sample_es">Texto de ejemplo</string>
	<string name="current_luxes_es">Luz ambiental: </string>
	<string name="current_luxes"></string>
	
	<!-- Volume_Config_Activity -->
	<string name="volume_info_message_en">Tap the screen to change volume levels.</string>
	<string name="volume_info_message_es">Pulse la pantalla para cambiar el volumen</string>
	<string name="end_message_en">End</string>
	<string name="end_message_es">Fin</string>
	<string name="volume_es">Volumen a</string>
	<string name="volume_longpush_es">Mantenga pulsado con un dedo la pantalla para hablar. Al oir la señal diga "Siguiente"
	    si quiere continuar a la pantalla de envio de email</string>
	
	<!-- Mail_Sender_Activity -->
	<string name="to_en">To: </string>
	<string name="to_es">Destinatario: </string>
	<string name="subject_en">Subject: </string>	
	<string name="subject_es">Sujeto: </string>	
	<string name="message_en">Message: </string>
	<string name="message_es">Mensaje: </string>
	<string name="send_en">Enviar</string>
	<string name="send_es">Send</string>
	<string name="trigger_en">Trigger change</string>
	<string name="trigger_es">Cambiar contexto</string>
	<string name="mail_sender_es">Pantalla de test para enviar email. Pulse sobre la pantalla para
	    elegir entre Destinatario, Sujeto, Mensaje y Enviar</string>
	<string name="mail_instructions_es">Aplicación de envío de email adaptada. Eliga destinatario, asunto y mensaje para completar el email.</string>

	<!-- AssistedCity String elements -->
	<string name="scan">Escanear</string>
	<string name="help">Ayuda</string>
	<string name="exit">Salir</string>
	<string name="settings">Preferencias</string>
	<string name="settings_simple">Settings-simple</string>
	<string name="directions">Get directions</string>
	<string name="location">Posición actual</string>
	<string name="actual_coordinates">Coordenadas actuales</string>
	<string name="piramide_webpage">http://www.piramidepse.com/</string>
	<string name="help_message_title">
		Bienvenido a la ciudad asistida.</string>
		<string name="help_message_body">
			Esta aplicación le ayudará a localizar los puntos de interés
			que desee y le guiará por su ciudad hasta ellos. 
		Para empezar, seleccione una de las categorías mostradas y, a
		cotinuación,
		seleccione uno de los puntos listados según la categoría seleccionada.
		Una vez haya hecho esto, simplemente siga las indicaciones
		por pantalla o por voz.
	</string>
	<string name="help_message_footer">
		Buena suerte y que llegue bien a su destino. </string>

	<string name="help_simple_message">Welcome to the Assisted City help-simple screen.
	</string>
	<string name="add_point">Add point</string>
	<string name="remove_point">Remove point</string>

</resources>
