<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/grid_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:rowCount="5" >

    <TextView
        android:id="@+id/title"
        android:layout_column="0"
        android:layout_gravity="center|top"
        android:layout_row="0"
        android:text="@string/instructions_es" 
        android:textSize="28sp" />
    
    <View style="@style/Divider"/>
    
    <TextView
        android:id="@+id/instructions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|top"
        android:layout_row="1"
        android:text="@string/basic_input_message_es"
        android:textSize="20sp" />

    <Button
        android:id="@+id/button_input"
        android:layout_width="248dp"
        android:layout_height="163dp"
        android:layout_column="0"
        android:layout_gravity="center|bottom"
        android:layout_row="2"
        android:text="@string/start_es" />

     <View style="@style/Divider"/>
    
     <TextView
        android:id="@+id/textView1"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="4"
        android:text="Si ha terminado el tutorial pruebe una de las siguientes aplicaciones:" />
     
    <Button
        android:id="@+id/mail_activity_button"
        android:layout_column="0"
        android:layout_gravity="left|bottom"
        android:layout_row="4"
        android:text="@string/send_email_es" />

    <Button
        android:id="@+id/navigate_button"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="4"
        android:text="@string/navigate_es" />

</GridLayout>