<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/default_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="4" >

    <LinearLayout
        android:id="@+id/linear_layout_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="0" >

        <TextView
            android:id="@+id/brightness_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/brightness_message_es" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_gravity="top"
        android:layout_row="1" >

        <NumberPicker
            android:id="@+id/brightness_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/light_sensor_value_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_luxes_es" />

        <TextView
            android:id="@+id/light_sensor_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/current_luxes" />

    </LinearLayout>

    <GridLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_gravity="top"
        android:layout_row="2"
        android:columnCount="1"
        android:rowCount="2" >

        <Button
            android:id="@+id/test_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:text="@string/button_sample_es" />

        <EditText
            android:id="@+id/button_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_gravity="left|top"
            android:layout_row="1"
            android:ems="10"
            android:inputType="text"
            android:text="@string/edit_text_sample_es" >

            <requestFocus />
        </EditText>
    </GridLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_gravity="right"
        android:layout_row="2" >

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next_message_es" />
    </RelativeLayout>

</GridLayout>