<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/default_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="5" >

    <LinearLayout
        android:id="@+id/linear_layout_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="0" >

        <TextView
            android:id="@+id/label_button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_info_message_es" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:layout_gravity="top"
        android:layout_row="1">

        <Button
            android:id="@+id/button_resize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_resize_message_es" />

    </LinearLayout>
    
    <View style="@style/Divider"/>
    
    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:layout_gravity="top"
        android:layout_row="2"
        >

        <Button
            android:id="@+id/button_background_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_background_color" 
            android:layout_gravity="left"/>
        
        <Button
            android:id="@+id/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_text_color_es" 
            android:layout_gravity="right"/>
        
    </LinearLayout>
    
    <LinearLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:layout_gravity="top"
        android:layout_row="3"
       >

        <Button
            android:id="@+id/button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_color_es" 
            android:layout_gravity="right"/>
    </LinearLayout>
    
    <View style="@style/Divider"/>
    
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="84dp"
        android:layout_gravity="right|fill_vertical"
        android:layout_row="4"
        >

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next_message_es" />

    </RelativeLayout>

</GridLayout>