<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/default_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="4" >

    <LinearLayout
        android:id="@+id/linear_layout_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="0" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_text_info_message_es" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:layout_gravity="top"
        android:layout_row="1" >

        <Button
            android:id="@+id/button_text_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/edit_text_message_es" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_2"
        android:layout_width="fill_parent"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_row="2" >

        <Button
            android:id="@+id/button_background_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:text="@string/edit_text_background_color" />

        <Button
            android:id="@+id/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:text="@string/edit_text_text_color" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="120dp"
        android:layout_gravity="right"
        android:layout_row="3" >

        <Button
            android:id="@+id/button_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next_message_es" />
    </RelativeLayout>

</GridLayout>