<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/default_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1"
    android:orientation="horizontal"
    android:rowCount="4" >

    <LinearLayout
        android:id="@+id/linear_layout_0"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_row="0" >

        <TextView
            android:id="@+id/label_button_info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_info_message_es" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_layout_1"
        android:layout_width="fill_parent"
        android:layout_height="110dp"
        android:layout_gravity="top"
        android:layout_row="1" >

        <Button
            android:id="@+id/button_resize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_resize_message_es" />

    </LinearLayout>
    
    <View style="@style/Divider"/>
    
    <GridLayout
        android:id="@+id/linear_layout_3"
        android:layout_width="fill_parent"
        android:layout_height="255dp"
        android:layout_gravity="top"
        android:layout_row="2"
        android:columnCount="1"
        android:rowCount="4" >

        <TextView
            android:id="@+id/textView1"
            android:layout_row="0"
            android:text="Arrastre el dedo para modificar el tamaño de los botones" />
        
        <Button
            android:id="@+id/button_background_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="1"
            android:text="@string/button_background_color_es" />

        <Button
            android:id="@+id/button_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/button_color_es" />

        <Button
            android:id="@+id/button_text_color"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="3"
            android:text="@string/button_text_color_es" />

    </GridLayout>
    
    <View style="@style/Divider"/>
    
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="fill_parent"
        android:layout_height="90dp"
        android:layout_gravity="right|fill_vertical"
        android:layout_row="3" >

        <Button
            android:id="@+id/buttonact_next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:text="@string/next_message_es" />

        <Button
            android:id="@+id/button_restore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="Restaurar colores" />

        <Button
            android:id="@+id/button_invert"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/button_restore"
            android:text="Invertir colores" />

    </RelativeLayout>

</GridLayout>